添加本地化

--- a/src/TodoModule.Web/App/Main/views/test/index.cshtml
+++ b/src/TodoModule.Web/App/Main/views/test/index.cshtml
@@ -1,4 +1,5 @@
-﻿<div ng-controller="app.views.todo as vm">
+﻿<script src="~/App/Main/views/test/index.js"></script>
+<div ng-controller="app.views.todo as vm">
     <h1>Todo page</h1>
     <div class="row">
         <div class="col-md-12">
